# staratlas-rs

./: .env.sample  .gitignore  Cargo.toml  LICENSE  NOTES.md  README.md  bun.lockb  package.json
_archived/hydrobot/: Cargo.toml
_archived/looperbot/: Cargo.toml
_archived/looperbot/src/: main.rs
_archived/sage-sdk/: Cargo.toml
_archived/sage-sdk/src/: lib.rs  utils.rs
_archived/sage-sdk/src/accounts/: cargo.rs  fleet.rs  planet.rs  starbase.rs
_archived/sage-sdk/src/derive/: cargo.rs  fleet.rs  game.rs  planet.rs  starbase.rs
_archived/sage-sdk/src/find/: cargo.rs  points.rs  sage_player_profile.rs  starbase.rs
_archived/sage-sdk/src/ixs/: cargo.rs  mod.rs  warp.rs
_archived/shared-sage-context/: Cargo.toml
_archived/shared-sage-context/src/: lib.rs
_archived/tui-minebot/: Cargo.toml
_archived/tui-minebot/src/: app.rs
_archived/tui-minebot/src/bots/: bot.rs  mod.rs  run.rs
_archived/tui-minebot/src/tui/: events.rs
apis-data/: NOTES.md  README.md
apis-data/galaxy-api/: Cargo.toml
bots/actix-minebot/: Cargo.toml  NOTES.md  README.md  minebot-config.json.sample
bots/actix-minebot/src/: actors.rs  app.rs  config.rs  errors.rs  main.rs  term.rs  tui.rs
bots/actix-minebot/src/actors/bot/: autoplay.rs  mod.rs  response.rs  tick.rs
bots/actix-minebot/src/actors/bot/roles/: cargo_transport.rs  mine_asteroid.rs  mod.rs
bots/actix-minebot/src/actors/sage/: action.rs  mod.rs  request.rs
bots/actix-minebot/src/db/: mod.rs
bots/actix-minebot/src/tui/: events.rs  ui.rs
bots/hydro-bot/: Cargo.toml
bots/hydrobot/: Cargo.toml
bots/hydrobot/src/: app.rs  bot.rs  cli.rs  main.rs  sage.rs  traits.rs  ui.rs
bots/sage-crossterm/: Cargo.toml
bots/tui-cargobot/: Cargo.toml
bots/tui-cargobot/src/: app.rs  bots.rs  labs.rs  main.rs  term.rs
bots/tui-cargobot/src/labs/: autoplay.rs  txs.rs
bots/tui-minebot/: Cargo.toml
bots/tui-minebot/src/: app.rs  bots.rs  cli.rs  labs.rs  main.rs  tabs.rs  term.rs  tui.rs  txs.rs
bots/tui-minebot/src/bots/: bot.rs  calc.rs  init.rs  mod.rs  process.rs  run.rs  txs.rs
bots/tui-minebot/src/labs/: txs.rs
bots/tui-minebot/src/tabs/: fleets.rs  logs.rs
bots/tui-minebot/src/ui/: mod.rs  tabs.rs
bots/tui-minebot/src/ui/tabs/: fleets.rs
bots/tui-starbase/: Cargo.toml
bots/tui-starbase/src/: main.rs  tui.rs
cargo/: Cargo.toml  idl.json
claim/: idl.json
clis/lockers-cli/: Cargo.toml  NOTES.md
clis/lockers-cli/src/: main.rs
clis/marketplace-cli/: README.md
clis/player-profile-cli/: Cargo.toml
clis/player-profile-cli/src/: main.rs
clis/sage-cli/: Cargo.toml  README.md
clis/sage-cli/src/: cli.rs  lib.rs  main.rs
crafting/src/: lib.rs
crates/shared-sage-cli/: Cargo.toml
crates/shared-sage-commander/: Cargo.toml
crates/shared-time/: Cargo.toml
crew/: .env.sample  Cargo.toml  NOTES.md  README.md
crew/crew-jupyter/: README.md  crew.ipynb  requirments.txt
crew/crew-polars/: Cargo.toml  README.md
crew/crew-py/: README.md  requirments.txt
crew/crew-scripts/: README.md  bun.lockb  package.json
crew/crew-utils/: Cargo.toml
crew/crew-utils/examples/: 00_metaplex.rs  01_galaxy.rs  02_cdn_crew.rs  basic.rs  galaxy.rs
crew/crew-utils/sql/: aptitude.sql
crew/sql/: 00_setup.sql  01_views.sql  aptitude.sql  means.sql
galaxy/: Cargo.toml  README.md  galaxy.json
galaxy/examples/: 00_download_galaxy.rs
galaxy/src/: lib.rs
games/sage-tui/: Cargo.toml
games/sage-tui/src/: app.rs  cli.rs  main.rs  sage.rs
marketplace/: Cargo.toml  README.md
marketplace/examples/: 00_basic.rs  01_csv_output.rs
markets/: README.md  certificateMints.json
markets/marketplace-db/: README.md  SETUP.md
markets/marketplace-slint-ui/: Cargo.toml
player-profile/: Cargo.toml  README.md  idl.json
player-profile/examples/: 00_basic.rs  01_create.rs
profile-vault/: Cargo.toml  idl.json
program-sdks/govern-sdk/: Cargo.toml
program-sdks/govern-sdk/src/: lib.rs  programs.rs
program-sdks/govern-sdk/src/derive/: mod.rs
program-sdks/govern-sdk/src/derive/atlas/: mod.rs  staking_account.rs
program-sdks/govern-sdk/src/derive/locked_voter/: escrow.rs  locker.rs  locker_whitelist_entry.rs  mod.rs
program-sdks/govern-sdk/src/derive/proxy_rewarder/: mod.rs  proxy.rs  proxy_escrow.rs  registered_locker.rs
program-sdks/player-profile-sdk/: Cargo.toml
program-sdks/player-profile-sdk/src/: derive.rs  lib.rs  programs.rs  utils.rs
program-sdks/sage-based-sdk/: Cargo.toml
program-sdks/sage-based-sdk/src/: accounts.rs  addr.rs  calc.rs  derive.rs  filter.rs  ixs.rs  lib.rs  program.rs
program-sdks/sage-based-sdk/src/accounts/: cargo.rs  fleet.rs  fleet_state.rs  mine_item.rs  planet.rs  resource.rs  types.rs
program-sdks/sage-sdk/: Cargo.toml
program-sdks/sage-sdk/src/: accounts.rs  fleets.rs  games.rs  lib.rs  programs.rs  utils.rs
program-sdks/sage-sdk/src/accounts/: fleet.rs  fleet_state.rs  game.rs  planet.rs  types.rs
program-sdks/sage-sdk/src/derive/: cargo.rs  fleet.rs  game.rs  mod.rs  planet.rs  starbase.rs
program-sdks/sage-sdk/src/find/: cargo.rs  game.rs  mod.rs  sage_player_profile.rs  starbase.rs
program-sdks/sage-sdk/src/ixs/: cargo.rs  fleet.rs  mine.rs  mining.rs  mod.rs  starbase.rs  warp.rs
programs/atlas-staking/: Cargo.toml  idl.json
programs/cargo/: Cargo.toml  idl.json
programs/claim/: Cargo.toml
programs/crafting/: Cargo.toml  (+1 more)
programs/marketplace/: Cargo.toml  README.md  idl.json
programs/marketplace/examples/: 00_basic.rs
programs/marketplace/src/: lib.rs
programs/player-profile/: Cargo.toml
programs/player-profile/examples/: 00_basic.rs
programs/player-profile/src/: lib.rs  utils.rs
sage/: Cargo.toml  idl.json
score/: Cargo.toml
servers/sage-commander/: Cargo.toml
servers/sage-commander/examples/: client.rs
servers/sage-commander/src/: errors.rs  main.rs  sage.rs
utils/sa-marketplace-cli/: Cargo.toml
utils/wallet-rs/: Cargo.toml  README.md  hackme.wallet.enc
utils/wallet-rs/examples/: 00_random_wallet.rs  01_write_wallet.rs  02_read_wallet.rs  03_rotate_wallet.rs
utils/wallet-rs/src/: lib.rs  prompts.rs  wallet.rs
(+70 files in other folders)
