[package]
name = "shared-sage-context"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anchor-client = "0.29"
anyhow = "1.0"
spl-associated-token-account = "2.3"
spl-token = "4.0"
staratlas-player-profile-sdk = { path = "../../program-sdks/player-profile-sdk" }
staratlas-sage-sdk = { path = "../../program-sdks/sage-sdk" }