[package]
name = "actix-minebot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
actix = "0.13"
anchor-client = { version = "0.29", features = ["async"] }
color-eyre = "0.6"
comfy-table = "7.1"
crossterm = { version = "0.27.0", features = ["event-stream"] }
dotenv = "0.15"
futures = "0.3"
itertools = "0.12"
ratatui = "0.29"
log = "0.4"
rusqlite = { version = "0.31.0", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shared-time = { path = "../../crates/shared-time" }
spl-token = "4.0"
strum = "0.26"
staratlas-sage-based-sdk = { path = "../../program-sdks/sage-based-sdk" }
tokio = { version = "1.37", features = ["signal"] }
tui-logger = "0.14"