[package]
name = "tui-minebot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
anchor-client = "0.29"
clap = { version = "4.5", features = ["derive", "env"] }
color-eyre = "0.6"
comfy-table = "7.1"
crossterm = "0.27"
ratatui = "0.26"
shared-time = { path = "../../crates/shared-time" }
shared-sage-context = { path = "../../crates/shared-sage-context" }
shellexpand = "3.1"