[package]
name = "tui-starbase"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
anchor-client = "0.29"
borsh = "1.4"
color-eyre = "0.6"
crossterm = { version = "0.27.0", features = ["event-stream"] }
futures = "0.3"
shared-sage-commander = { path = "../../crates/shared-sage-commander" }
tokio = { version = "1.36", features = ["rt", "sync"] }