[package]
name = "crew-utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anchor-client = "0.30"
anchor-lang = "0.30"
anyhow = "1.0"
csv-async = { version = "1.3", features = ["tokio", "with_serde"] }
mpl-bubblegum = "1.4"
mpl-token-metadata = "4.1"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.39", features = ["full"] }
