[package]
name = "crew-utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
csv-async = { version = "1.3", features = ["tokio", "with_serde"] }
dotenv = "0.15"
duckdb = { version = "1.0", features = ["bundled"] }
mpl-core = "0.8.0"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
solana-client = "1.18"
solana-sdk = "1.18"
tokio = { version = "1.39", features = ["full"] }
