[package]
name = "staratlas-govern-sdk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anchor-client = "0.29"
anchor-lang = "0.29"
anyhow = "1.0"
borsh = { version = "1.3", features = ["derive"] }
solana-account-decoder = "1.18"
staratlas-atlas-staking = { path = "../../programs/atlas-staking", features = ["no-entrypoint"]  }
staratlas-locked-voter = { path = "../../programs/locked-voter", features = ["no-entrypoint"]  }
staratlas-proxy-rewarder = { path = "../../programs/proxy-rewarder", features = ["no-entrypoint"]  }