[package]
name = "staratlas-player-profile-sdk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anchor-client = "0.29"
anchor-lang = "0.29"
anyhow = "1.0"
solana-account-decoder = "1.18"
staratlas-player-profile = { path = "../../programs/player-profile", features = ["no-entrypoint"]  }