[package]
name = "sage-commander"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
anchor-lang = "0.29"
borsh = "1.4"
color-eyre = "0.6"
futures-util = "0.3"
shared-sage-cli = { path = "../../crates/shared-sage-cli" }
shared-sage-commander = { path = "../../crates/shared-sage-commander" }
shared-sage-context = { path = "../../crates/shared-sage-context" }
tokio = { version = "1", features = ["full"] }
warp = "0.3"

[dev-dependencies]
futures = "0.3"
tokio-tungstenite = "0.21"
url = "2.5"