[package]
name = "sa-marketplace-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anchor-client = "0.27"
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
csv = "1.3"
dotenv = "0.15"
staratlas-galaxy = { path = "../../galaxy" }
staratlas-marketplace = { path = "../../marketplace" }
