[package]
name = "staratlas-utils-wallet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
borsh = { version = "1.0.0-alpha.2", features = ["derive"] }
cocoon = "0.3"
rpassword = "7.2"
solana-sdk = "1.14"

[dev-dependencies]
staratlas-utils-config = { path = "../config" }